@@ -14,6 +14,7 @@ News
 - #6: Progress Bar prints delay with proper precision on py3k
 - textui: Progress Bar shows ETA
 - #8: progressbar prints floats as delay on py3k
+- textui: ProgressBar.iterate clean-ups output if there is an exception/break
 
 1.0.1
 -----
